; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_snow_dwt.c_spatial_compose53i_dy.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_snow_dwt.c_spatial_compose53i_dy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i32*, i32*, i32, i32, i32)* @spatial_compose53i_dy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @spatial_compose53i_dy(%struct.TYPE_3__* %0, i32* %1, i32* %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  store i32 %20, i32* %13, align 4
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 2
  %23 = load i32*, i32** %22, align 8
  store i32* %23, i32** %14, align 8
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 1
  %26 = load i32*, i32** %25, align 8
  store i32* %26, i32** %15, align 8
  %27 = load i32*, i32** %8, align 8
  %28 = load i32, i32* %13, align 4
  %29 = add nsw i32 %28, 1
  %30 = load i32, i32* %11, align 4
  %31 = sub nsw i32 %30, 1
  %32 = call i32 @avpriv_mirror(i32 %29, i32 %31)
  %33 = load i32, i32* %12, align 4
  %34 = mul nsw i32 %32, %33
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds i32, i32* %27, i64 %35
  store i32* %36, i32** %16, align 8
  %37 = load i32*, i32** %8, align 8
  %38 = load i32, i32* %13, align 4
  %39 = add nsw i32 %38, 2
  %40 = load i32, i32* %11, align 4
  %41 = sub nsw i32 %40, 1
  %42 = call i32 @avpriv_mirror(i32 %39, i32 %41)
  %43 = load i32, i32* %12, align 4
  %44 = mul nsw i32 %42, %43
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds i32, i32* %37, i64 %45
  store i32* %46, i32** %17, align 8
  %47 = load i32, i32* %13, align 4
  %48 = add nsw i32 %47, 1
  %49 = load i32, i32* %11, align 4
  %50 = icmp ult i32 %48, %49
  br i1 %50, label %51, label %57

51:                                               ; preds = %6
  %52 = load i32*, i32** %15, align 8
  %53 = load i32*, i32** %16, align 8
  %54 = load i32*, i32** %17, align 8
  %55 = load i32, i32* %10, align 4
  %56 = call i32 @vertical_compose53iL0(i32* %52, i32* %53, i32* %54, i32 %55)
  br label %57

57:                                               ; preds = %51, %6
  %58 = load i32, i32* %13, align 4
  %59 = add nsw i32 %58, 0
  %60 = load i32, i32* %11, align 4
  %61 = icmp ult i32 %59, %60
  br i1 %61, label %62, label %68

62:                                               ; preds = %57
  %63 = load i32*, i32** %14, align 8
  %64 = load i32*, i32** %15, align 8
  %65 = load i32*, i32** %16, align 8
  %66 = load i32, i32* %10, align 4
  %67 = call i32 @vertical_compose53iH0(i32* %63, i32* %64, i32* %65, i32 %66)
  br label %68

68:                                               ; preds = %62, %57
  %69 = load i32, i32* %13, align 4
  %70 = sub nsw i32 %69, 1
  %71 = load i32, i32* %11, align 4
  %72 = icmp ult i32 %70, %71
  br i1 %72, label %73, label %78

73:                                               ; preds = %68
  %74 = load i32*, i32** %14, align 8
  %75 = load i32*, i32** %9, align 8
  %76 = load i32, i32* %10, align 4
  %77 = call i32 @horizontal_compose53i(i32* %74, i32* %75, i32 %76)
  br label %78

78:                                               ; preds = %73, %68
  %79 = load i32, i32* %13, align 4
  %80 = add nsw i32 %79, 0
  %81 = load i32, i32* %11, align 4
  %82 = icmp ult i32 %80, %81
  br i1 %82, label %83, label %88

83:                                               ; preds = %78
  %84 = load i32*, i32** %15, align 8
  %85 = load i32*, i32** %9, align 8
  %86 = load i32, i32* %10, align 4
  %87 = call i32 @horizontal_compose53i(i32* %84, i32* %85, i32 %86)
  br label %88

88:                                               ; preds = %83, %78
  %89 = load i32*, i32** %16, align 8
  %90 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %91 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %90, i32 0, i32 2
  store i32* %89, i32** %91, align 8
  %92 = load i32*, i32** %17, align 8
  %93 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %94 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %93, i32 0, i32 1
  store i32* %92, i32** %94, align 8
  %95 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %96 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %95, i32 0, i32 0
  %97 = load i32, i32* %96, align 8
  %98 = add nsw i32 %97, 2
  store i32 %98, i32* %96, align 8
  ret void
}

declare dso_local i32 @avpriv_mirror(i32, i32) #1

declare dso_local i32 @vertical_compose53iL0(i32*, i32*, i32*, i32) #1

declare dso_local i32 @vertical_compose53iH0(i32*, i32*, i32*, i32) #1

declare dso_local i32 @horizontal_compose53i(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
